fix the i18n text issue

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -37,14 +37,14 @@
     "securePayment": "Secure payment",
     "instantAccess": "Instant access",
     "cancelAnytime": "Cancel anytime",
-    "loadError": "Failed to load pricing plans: {{error}}",
+    "loadError": "Failed to load pricing plans: {error}",
     "retry": "Retry",
     "noPlansTitle": "No Plans Available",
     "noPlansDescription": "Please check back later or contact support.",
     "features": "Features",
     "claudeModel": "Claude Sonnet 4.5 model",
-    "apiKeys": "{{count}} individual API keys",
-    "tokensOff": "{{percent}}% tokens off",
+    "apiKeys": "{count} individual API keys",
+    "tokensOff": "{percent}% tokens off",
     "allModels": "All AI models",
     "prioritySupport": "Priority support",
     "apiAccess": "API access",
@@ -367,7 +367,7 @@
       "error": "Failed to load payments",
       "loadMore": "Load More",
       "perPage": "Per page",
-      "pageOf": "Page {{page}} of {{totalPages}}",
+      "pageOf": "Page {page} of {totalPages}",
       "totalPages": "Total Pages",
       "paymentTypes": {
         "sub": "Subscription",
@@ -445,13 +445,13 @@
       "copied": "Copied!",
       "noApiKeys": "No API Keys Yet",
       "noApiKeysDescription": "Create your first API key to start using our services",
-      "planLimitError": "{{plan}} members can create up to {{limit}} API keys",
+      "planLimitError": "{plan} members can create up to {limit} API keys",
       "creating": "Creating new API key",
       "createError": "Failed to create API key",
       "deleting": "Deleting",
       "delete": "Delete",
       "deleteConfirmTitle": "Delete API Key",
-      "deleteConfirmMessage": "Are you sure you want to delete the API key '{{name}}'? This action cannot be undone.",
+      "deleteConfirmMessage": "Are you sure you want to delete the API key '{name}'? This action cannot be undone.",
       "deleteConfirmWarning": "Warning: All applications using this API key will lose access immediately.",
       "deleteError": "Failed to delete API key",
       "totalApiKeys": "Total API Keys",
