--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -37,14 +37,14 @@
     "securePayment": "Paiement sécurisé",
     "instantAccess": "Accès instantané",
     "cancelAnytime": "Annulation à tout moment",
-    "loadError": "Échec du chargement des plans tarifaires : {{error}}",
+    "loadError": "Échec du chargement des plans tarifaires : {error}",
     "retry": "Réessayer",
     "noPlansTitle": "Aucun Plan Disponible",
     "noPlansDescription": "Veuillez revenir plus tard ou contacter le support.",
     "features": "Fonctionnalités",
     "claudeModel": "Modèle Claude Sonnet 4.5",
-    "apiKeys": "{{count}} clés API individuelles",
-    "tokensOff": "{{percent}}% de réduction sur les tokens",
+    "apiKeys": "{count} clés API individuelles",
+    "tokensOff": "{percent}% de réduction sur les tokens",
     "allModels": "Tous les modèles IA",
     "prioritySupport": "Support prioritaire",
     "apiAccess": "Accès API",
@@ -367,7 +367,7 @@
       "error": "Échec du chargement des paiements",
       "loadMore": "Charger Plus",
       "perPage": "Par page",
-      "pageOf": "Page {{page}} sur {{totalPages}}",
+      "pageOf": "Page {page} sur {totalPages}",
       "totalPages": "Total des Pages",
       "paymentTypes": {
         "sub": "Abonnement",
@@ -445,13 +445,13 @@
       "copied": "Copié !",
       "noApiKeys": "Aucune Clé API",
       "noApiKeysDescription": "Créez votre première clé API pour commencer à utiliser nos services",
-      "planLimitError": "Les membres {{plan}} peuvent créer jusqu'à {{limit}} clés API",
+      "planLimitError": "Les membres {plan} peuvent créer jusqu'à {limit} clés API",
       "creating": "Création d'une nouvelle clé API",
       "createError": "Échec de la création de la clé API",
       "deleting": "Suppression",
       "delete": "Supprimer",
       "deleteConfirmTitle": "Supprimer la Clé API",
-      "deleteConfirmMessage": "Êtes-vous sûr de vouloir supprimer la clé API '{{name}}' ? Cette action ne peut pas être annulée.",
+      "deleteConfirmMessage": "Êtes-vous sûr de vouloir supprimer la clé API '{name}' ? Cette action ne peut pas être annulée.",
       "deleteConfirmWarning": "Attention : Toutes les applications utilisant cette clé API perdront immédiatement l'accès.",
       "deleteError": "Échec de la suppression de la clé API",
       "totalApiKeys": "Total des Clés API",
