--- a/src/i18n/messages/ja.json
+++ b/src/i18n/messages/ja.json
@@ -37,14 +37,14 @@
     "securePayment": "安全な支払い",
     "instantAccess": "即時アクセス",
     "cancelAnytime": "いつでも解約可能",
-    "loadError": "料金プランの読み込みに失敗しました: {{error}}",
+    "loadError": "料金プランの読み込みに失敗しました: {error}",
     "retry": "再試行",
     "noPlansTitle": "利用可能なプランがありません",
     "noPlansDescription": "後でもう一度確認するか、サポートにお問い合わせください。",
     "features": "機能",
     "claudeModel": "Claude Sonnet 4.5モデル",
-    "apiKeys": "{{count}}個の個別APIキー",
-    "tokensOff": "{{percent}}%トークンオフ",
+    "apiKeys": "{count}個の個別APIキー",
+    "tokensOff": "{percent}%トークンオフ",
     "allModels": "すべてのAIモデル",
     "prioritySupport": "優先サポート",
     "apiAccess": "APIアクセス",
@@ -367,7 +367,7 @@
       "error": "支払いの読み込みに失敗しました",
       "loadMore": "もっと読み込む",
       "perPage": "ページあたり",
-      "pageOf": "ページ {{page}} / {{totalPages}}",
+      "pageOf": "ページ {page} / {totalPages}",
       "totalPages": "総ページ数",
       "paymentTypes": {
         "sub": "購読",
@@ -445,13 +445,13 @@
       "copied": "コピーしました！",
       "noApiKeys": "まだAPIキーがありません",
       "noApiKeysDescription": "最初のAPIキーを作成してサービスの利用を開始",
-      "planLimitError": "{{plan}}メンバーは最大{{limit}}個のAPIキーを作成できます",
+      "planLimitError": "{plan}メンバーは最大{limit}個のAPIキーを作成できます",
       "creating": "新しいAPIキーを作成中",
       "createError": "APIキーの作成に失敗しました",
       "deleting": "削除中",
       "delete": "削除",
       "deleteConfirmTitle": "APIキーを削除",
-      "deleteConfirmMessage": "APIキー '{{name}}' を削除してもよろしいですか？この操作は元に戻せません。",
+      "deleteConfirmMessage": "APIキー '{name}' を削除してもよろしいですか？この操作は元に戻せません。",
       "deleteConfirmWarning": "警告：このAPIキーを使用しているすべてのアプリケーションは直ちにアクセスできなくなります。",
       "deleteError": "APIキーの削除に失敗しました",
       "totalApiKeys": "総APIキー数",
