--- a/src/i18n/messages/ko.json
+++ b/src/i18n/messages/ko.json
@@ -37,14 +37,14 @@
     "securePayment": "안전한 결제",
     "instantAccess": "즉시 접근",
     "cancelAnytime": "언제든지 취소",
-    "loadError": "가격 플랜 로드 실패: {{error}}",
+    "loadError": "가격 플랜 로드 실패: {error}",
     "retry": "재시도",
     "noPlansTitle": "사용 가능한 플랜 없음",
     "noPlansDescription": "나중에 다시 확인하거나 지원팀에 문의하세요.",
     "features": "기능",
     "claudeModel": "Claude Sonnet 4.5 모델",
-    "apiKeys": "{{count}}개의 개별 API 키",
-    "tokensOff": "{{percent}}% 토큰 할인",
+    "apiKeys": "{count}개의 개별 API 키",
+    "tokensOff": "{percent}% 토큰 할인",
     "allModels": "모든 AI 모델",
     "prioritySupport": "우선 지원",
     "apiAccess": "API 접근",
@@ -367,7 +367,7 @@
       "error": "결제 내역 로드 실패",
       "loadMore": "더보기",
       "perPage": "페이지당",
-      "pageOf": "페이지 {{page}} / {{totalPages}}",
+      "pageOf": "페이지 {page} / {totalPages}",
       "totalPages": "총 페이지",
       "paymentTypes": {
         "sub": "구독",
@@ -445,13 +445,13 @@
       "copied": "복사됨!",
       "noApiKeys": "아직 API 키가 없습니다",
       "noApiKeysDescription": "서비스 사용을 시작하려면 첫 번째 API 키를 생성하세요",
-      "planLimitError": "{{plan}} 회원은 최대 {{limit}}개의 API 키를 생성할 수 있습니다",
+      "planLimitError": "{plan} 회원은 최대 {limit}개의 API 키를 생성할 수 있습니다",
       "creating": "새 API 키 생성 중",
       "createError": "API 키 생성 실패",
       "deleting": "삭제 중",
       "delete": "삭제",
       "deleteConfirmTitle": "API 키 삭제",
-      "deleteConfirmMessage": "API 키 '{{name}}'를 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다.",
+      "deleteConfirmMessage": "API 키 '{name}'를 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다.",
       "deleteConfirmWarning": "경고: 이 API 키를 사용하는 모든 애플리케이션은 즉시 접근을 잃게 됩니다.",
       "deleteError": "API 키 삭제 실패",
       "totalApiKeys": "총 API 키",
