--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -37,14 +37,14 @@
     "securePayment": "安全支付",
     "instantAccess": "即时访问",
     "cancelAnytime": "随时取消",
-    "loadError": "加载定价计划失败：{{error}}",
+    "loadError": "加载定价计划失败：{error}",
     "retry": "重试",
     "noPlansTitle": "暂无可用套餐",
     "noPlansDescription": "请稍后查看或联系客服。",
     "features": "功能",
     "claudeModel": "Claude Sonnet 4.5 模型",
-    "apiKeys": "{{count}} 个独立 API 密钥",
-    "tokensOff": "{{percent}}% 令牌折扣",
+    "apiKeys": "{count} 个独立 API 密钥",
+    "tokensOff": "{percent}% 令牌折扣",
     "allModels": "所有 AI 模型",
     "prioritySupport": "优先支持",
     "apiAccess": "API 访问",
@@ -374,7 +374,7 @@
       "error": "加载支付记录失败",
       "loadMore": "加载更多",
       "perPage": "每页",
-      "pageOf": "第 {{page}} 页，共 {{totalPages}} 页",
+      "pageOf": "第 {page} 页，共 {totalPages} 页",
       "totalPages": "总页数",
       "paymentTypes": {
         "sub": "订阅",
@@ -452,13 +452,13 @@
       "copied": "已复制！",
       "noApiKeys": "暂无API密钥",
       "noApiKeysDescription": "创建您的第一个API密钥以开始使用我们的服务",
-      "planLimitError": "{{plan}}会员最多可创建{{limit}}个API密钥",
+      "planLimitError": "{plan}会员最多可创建{limit}个API密钥",
       "creating": "正在创建API密钥",
       "createError": "创建API密钥失败",
       "deleting": "删除中",
       "delete": "删除",
       "deleteConfirmTitle": "删除API密钥",
-      "deleteConfirmMessage": "确定要删除API密钥 '{{name}}' 吗？此操作无法撤销。",
+      "deleteConfirmMessage": "确定要删除API密钥 '{name}' 吗？此操作无法撤销。",
       "deleteConfirmWarning": "警告：所有使用此API密钥的应用程序将立即失去访问权限。",
       "deleteError": "删除API密钥失败",
       "totalApiKeys": "总 API 密钥数",
