--- a/src/i18n/messages/ja.json
+++ b/src/i18n/messages/ja.json
@@ -451,7 +451,7 @@
       "deleting": "削除中",
       "delete": "削除",
       "deleteConfirmTitle": "APIキーを削除",
-      "deleteConfirmMessage": "APIキー '{name}' を削除してもよろしいですか？この操作は元に戻せません。",
+      "deleteConfirmMessage": "APIキー {name} を削除してもよろしいですか？この操作は元に戻せません。",
       "deleteConfirmWarning": "警告：このAPIキーを使用しているすべてのアプリケーションは直ちにアクセスできなくなります。",
       "deleteError": "APIキーの削除に失敗しました",
       "totalApiKeys": "総APIキー数",
