--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -105,7 +105,7 @@
   },
   "hero": {
     "title": "Code I Lab",
-    "subtitle": "Accès API abordable à OpenAI Codex pour les développeurs. Découvrez une génération de code puissante avec des plans tarifaires flexibles et une intégration transparente dans votre flux de développement existant.",
+    "subtitle": "Accès API abordable à Ai Coding pour les développeurs. Découvrez une génération de code puissante avec des plans tarifaires flexibles et une intégration transparente dans votre flux de développement existant.",
     "cta": "Commencer",
     "learnMore": "En savoir plus",
     "installNodeJs": "Installer",
