--- a/src/i18n/messages/ja.json
+++ b/src/i18n/messages/ja.json
@@ -105,7 +105,7 @@
   },
   "hero": {
     "title": "Code I Lab",
-    "subtitle": "開発者向けの利用しやすいOpenAI Codex APIアクセス。柔軟な価格プランと既存の開発ワークフローへのシームレスな統合で、強力なコード生成を体験してください。",
+    "subtitle": "開発者向けの利用しやすい Ai Coding APIアクセス。柔軟な価格プランと既存の開発ワークフローへのシームレスな統合で、強力なコード生成を体験してください。",
     "cta": "開始する",
     "learnMore": "詳細を見る",
     "readDoc": "ドキュメントを読む",
