--- a/src/i18n/messages/ko.json
+++ b/src/i18n/messages/ko.json
@@ -105,7 +105,7 @@
   },
   "hero": {
     "title": "Code I Lab",
-    "subtitle": "개발자를 위한 저렴한 OpenAI Codex API 접근. 유연한 가격 플랜과 기존 개발 워크플로우에 대한 원활한 통합으로 강력한 코드 생성을 경험하세요.",
+    "subtitle": "개발자를 위한 저렴한 Ai Coding API 접근. 유연한 가격 플랜과 기존 개발 워크플로우에 대한 원활한 통합으로 강력한 코드 생성을 경험하세요.",
     "cta": "시작하기",
     "learnMore": "더 알아보기",
     "readDoc": "문서 읽기",
